syntax = "proto3";

package auth;

option go_package = "sso.v1;ssov1";

// Service for managing auth
service Auth {
    // Register new user
    rpc SignUp (SignUpRequest) returns (SignUpResponse);

    // Login user and return token
    rpc SignIn (SignInRequest) returns (SignInResponse);
}

// TODO: На будущее
// service Permissions {
//     rpc GetUserPermissions(GetUserPermissionsRequest) returns (UserPermissions);
// }

message SignUpRequest {
    string name = 1;
    string email = 2;
    string username = 3;
    string password = 4;
}

message SignUpResponse {
    string user_id = 1; // User id of the registered user
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    string token = 1; // Auth token of the logged user
}

